--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.username=root
-spring.datasource.password=123456
-spring.datasource.url=jdbc:mysql://58.19.180.139:5102/business?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false&serverTimezone=GMT%2B8
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=wtbase
+spring.datasource.password=wtbase
+spring.datasource.url=jdbc:oracle:thin:@127.0.0.1:1521:orcl
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.initialSize=5
 spring.datasource.minIdle=5
@@ -24,8 +24,10 @@ spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowS
 #mybatis
 mybatis.type-aliases-package=com.retire.pojo
 mybatis.mapper-locations=classpath:mappers/*.xml
+mybatis.configuration.log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+
 #swagger
-swagger.swagger-ui-open=false
+swagger.swagger-ui-open=true
 #mail
 spring.mail.default-encoding=utf-8
 #这里用的是QQ邮箱，所以是qq.com
@@ -36,4 +38,10 @@ spring.mail.username=2393189428@qq.com
 spring.mail.password=vslcecqdkofzeajb
 #qq需要开启ssl
 spring.mail.properties.mail.smtp.ssl.enable=true
+
+# 配置pageHelper分页插件的内容
+pagehelper.helper-dialect=oracle
+pagehelper.reasonable=true
+pagehelper.support-methods-arguments=true
+pagehelper.params=count=countSql
 
